--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,15 @@ name = "portal"
 main = "dist/src/index.ts"
 compatibility_date = "2023-09-14"
 workers_dev = true
+account_id = "4f296275a5fa3d5c36343151790e96d3"
+usage_model = "bundled"
+
+routes = [
+    { pattern = "portal.ideias.casa", custom_domain = true }
+]
+
+[site]
+bucket = "./react/build"
 
 [build]
 command = "npx webpack --progress"
@@ -11,4 +20,3 @@ command = "npx webpack --progress"
 # [[services]]
 # binding = "MY_SERVICE"
 # service = "/api/*"
-
