--- a/.github/workflows/portal.yml
+++ b/.github/workflows/portal.yml
@@ -13,7 +13,12 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: cd react && yarn install && yarn build && cd ..
-      - run: npm run deploy
+      - run: cd react && yarn install && cd ..
+      - name: Build react
+        run: cd react && yarn build && cd ..
+      - name: Build
+        run: npm run build
+      - name: Deploy
+        run: npm run deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{secrets.CF_WORKER_TOKEN}}
