--- a/.github/workflows/dili.yml
+++ b/.github/workflows/dili.yml
@@ -1,9 +1,7 @@
 name: Deploy
 
 on:
-  pull_request:
-    branches:
-      - main
+  push:
   workflow_dispatch:
 
 jobs:
@@ -20,6 +18,9 @@ jobs:
       - name: Build react
         run: cd react && yarn build && cd ..
       - name: Deploy
-        run: npm run deploy
+        run: |
+          echo ${{secrets.DILI_KEY}}      | npx wrangler secret put OMIE_APP_KEY
+          echo ${{secrets.DILI_SECRET}}    | npx wrangler secret put OMIE_APP_SECRET
+          npx wrangler deploy --name ${{vars.DILI_WWW}} --route ${{vars.DILI_WWW}}.ideias.casa/*
         env:
-          CLOUDFLARE_API_TOKEN: ${{secrets.CF_WORKER_TOKEN}}
+          CLOUDFLARE_API_TOKEN: ${{secrets.CF_TOKEN}}
