--- a/.github/workflows/dili.yml
+++ b/.github/workflows/dili.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           echo ${{secrets.DILI_KEY}}      | npx wrangler secret put OMIE_APP_KEY --name ${{vars.DILI_WWW}}
           echo ${{secrets.DILI_SECRET}}    | npx wrangler secret put OMIE_APP_SECRET --name ${{vars.DILI_WWW}}
-          npx wrangler deploy --name ${{vars.DILI_WWW}} --route ${{vars.DILI_WWW}}.ideias.casa/*
+          npx wrangler deploy --name ${{vars.DILI_WWW}} --routes [{ pattern = "${{vars.DILI_WWW}}.ideias.casa", custom_domain = true }]
         env:
           CLOUDFLARE_API_TOKEN: ${{secrets.CF_TOKEN}}
