--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,2 +1,18 @@
+main = "dist/src/index.ts"
 compatibility_date = "2023-09-14"
+workers_dev = false
+usage_model = "bundled"
+
 account_id = "4f296275a5fa3d5c36343151790e96d3"
+
+[site]
+bucket = "./react/build"
+
+[build]
+command = "npx webpack --progress"
+
+[env.dili]
+name = "diliboleto"
+routes = [
+    { pattern = "diliboleto.ideias.casa", custom_domain = true }
+]
